--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@golevelup/ts-jest": "^0.3.4",
     "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
