chore - imporve naming covention

--- a/.env.sample
+++ b/.env.sample
@@ -7,13 +7,13 @@ DB_DATABASE=web_scrapper
 DB_USERNAME=postgres
 DB_PASSWORD=n1mbl3_p4ss!
 
-IMAGE_BUCKET=web-scrape-nimble
+FILE_BUCKET=web-scrape-nimble
 BASIC_AUTH_USERNAME=nimble
 BASIC_AUTH_PASSWORD=n1mbl3_2023!
 REDIS_HOST=localhost
 REDIS_PORT=6379
 JWT_SECRET=secret
 JWT_EXPIRES_IN=2d
-AWS_ACCESS_KEY_ID=AKIAXSYUYIOLBVQ4RB3N
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=<accesskey-id>
+AWS_SECRET_ACCESS_KEY=<aws-accesskey>
 AWS_REGION=ap-southeast-1
